test/cases/compile_errors/function_prototype_with_no_body.zig
fn foo() void;
export fn entry() void {
    foo();
}

// error
// backend=llvm
// target=native
//
// :1:1: error: non-extern function has no body
